--- a/milestone1/css/style.css
+++ b/milestone1/css/style.css
@@ -23,6 +23,13 @@ body {
     width: 20%;
 }
 
+.my-w-15 {
+    width: 64px;
+}
+
+.img-user {
+    height: 55px;
+}
 
 .my-p-margin {
     margin: 0 auto;
@@ -84,4 +91,9 @@ body {
 .contact-container {
     height: 100%;
     overflow-y: auto;
+}
+
+.send-message-nav {
+    height: 70px;
+    background-color: #f3eeea;
 }
